--- a/test/vcr_cassettes/add_to_group.yml
+++ b/test/vcr_cassettes/add_to_group.yml
@@ -2,18 +2,18 @@
 http_interactions:
 - request:
     method: post
-    uri: https://test.infusionsoft.com/api/xmlrpc
+    uri: https://yi226.infusionsoft.com/api/xmlrpc
     body:
       encoding: UTF-8
       string: |
-        <?xml version="1.0" ?><methodCall><methodName>DataService.updateCustomField</methodName><params><param><value><string>not_a_real_key</string></value></param><param><value><i4>16</i4></value></param><param><value><struct><member><name>Label</name><value><string>Stuff</string></value></member></struct></value></param></params></methodCall>
+        <?xml version="1.0" ?><methodCall><methodName>ContactService.addToGroup</methodName><params><param><value><string>84f119a62b3d8b3e0ece196184e8f0f5</string></value></param><param><value><i4>3794</i4></value></param><param><value><i4>382</i4></value></param></params></methodCall>
     headers:
       User-Agent:
       - Infusionsoft-1.1.8 (RubyGem)
       Content-Type:
       - text/xml; charset=utf-8
       Content-Length:
-      - '358'
+      - '279'
       Connection:
       - keep-alive
       Accept-Encoding:
@@ -32,18 +32,18 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Expires:
-      - Sun, 12 Apr 2015 11:12:51 GMT
+      - Sat, 30 May 2015 19:30:00 GMT
       Content-Type:
       - text/xml;charset=UTF-8
       Content-Length:
       - '138'
       Date:
-      - Sat, 11 Apr 2015 23:12:51 GMT
+      - Sat, 30 May 2015 07:29:59 GMT
       Set-Cookie:
       - app-lb=2466578442.20480.0000; path=/
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><methodResponse><params><param><value><boolean>1</boolean></value></param></params></methodResponse>
     http_version: 
-  recorded_at: Sat, 11 Apr 2015 23:12:51 GMT
+  recorded_at: Sat, 30 May 2015 07:30:00 GMT
 recorded_with: VCR 2.9.3
