--- a/test/vcr_cassettes/remove_from_group.yml
+++ b/test/vcr_cassettes/remove_from_group.yml
@@ -2,18 +2,18 @@
 http_interactions:
 - request:
     method: post
-    uri: https://test.infusionsoft.com/api/xmlrpc
+    uri: https://yi226.infusionsoft.com/api/xmlrpc
     body:
       encoding: UTF-8
       string: |
-        <?xml version="1.0" ?><methodCall><methodName>DataService.addCustomField</methodName><params><param><value><string>not_a_real_key</string></value></param><param><value><string>Company</string></value></param><param><value><string>Awesomeness Level</string></value></param><param><value><string>Text</string></value></param><param><value><i4>4</i4></value></param></params></methodCall>
+        <?xml version="1.0" ?><methodCall><methodName>ContactService.removeFromGroup</methodName><params><param><value><string>84f119a62b3d8b3e0ece196184e8f0f5</string></value></param><param><value><i4>3794</i4></value></param><param><value><i4>382</i4></value></param></params></methodCall>
     headers:
       User-Agent:
       - Infusionsoft-1.1.8 (RubyGem)
       Content-Type:
       - text/xml; charset=utf-8
       Content-Length:
-      - '404'
+      - '284'
       Connection:
       - keep-alive
       Accept-Encoding:
@@ -32,18 +32,18 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Expires:
-      - Sun, 12 Apr 2015 11:09:25 GMT
+      - Sat, 30 May 2015 19:31:42 GMT
       Content-Type:
       - text/xml;charset=UTF-8
       Content-Length:
-      - '129'
+      - '138'
       Date:
-      - Sat, 11 Apr 2015 23:09:25 GMT
+      - Sat, 30 May 2015 07:31:42 GMT
       Set-Cookie:
       - app-lb=2466578442.20480.0000; path=/
     body:
       encoding: UTF-8
-      string: <?xml version="1.0" encoding="utf-8"?><methodResponse><params><param><value><i4>16</i4></value></param></params></methodResponse>
+      string: <?xml version="1.0" encoding="utf-8"?><methodResponse><params><param><value><boolean>1</boolean></value></param></params></methodResponse>
     http_version: 
-  recorded_at: Sat, 11 Apr 2015 23:09:25 GMT
+  recorded_at: Sat, 30 May 2015 07:31:42 GMT
 recorded_with: VCR 2.9.3
